--- a/Exercise 1.ipynb
+++ b/Exercise 1.ipynb
@@ -10,12 +10,7 @@
     "1. Given a number, find the sum of its digits. Take the number as\n",
     "an input from the user.\n",
     "2. Given a number, check whether the given number is an\n",
-    "Armstrong number or not. A positive integer is called an\n",
-    "Armstrong number of order n if:\n",
-    "abcd... = an\n",
-    " + bn + cn\n",
-    " + dn\n",
-    " + ...\n",
+    "Armstrong number or not.\n",
     "Example: 153 = 1*1*1 + 5*5*5 + 3*3*3\n",
     "153 is an Armstrong number of order 3.\n",
     "Inputs from the user will be number and order n.\n",
@@ -42,28 +37,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234\n",
+      "Sum of digits in number is  10\n"
+     ]
+    }
+   ],
    "source": [
     "#1.Given a number, find the sum of its digits. Take the number as an input from the user.\n",
     "ans=0\n",
     "for i in input():ans += int(i)\n",
-    "ans  "
+    "print('Sum of digits in number is ',ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153 3\n",
+      "153 is Armstrong\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Given a number, check whether the given number is an Armstrong number or not.\n",
     "# ... Example: 153 = 1*1*1 + 5*5*5 + 3*3*3 153 is an Armstrong number of order 3. Inputs from the user will be number and order n.\n",
@@ -79,9 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nitin\n",
+      "nitin is palindrome\n"
+     ]
+    }
+   ],
    "source": [
     "#3. Given a string, write a python function to check if it is palindrome or not. A string is said to be palindrome if the reverse of the string is the same as string. For example, “malayalam” is a palindrome, but “music” is not a palindrome.\n",
     "input_str= input().lower()\n",
@@ -95,21 +110,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{34: 1, 39: 3, 12: 1, 13: 1, 46: 1, 14: 1, 23: 1, 87: 1}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#4. Given an array which may contain duplicates, print all elements and their frequencies.\n",
-    "arr=list(map(int, input().split()))\n",
+    "# arr=list(map(int, input().split()))\n",
+    "arr=[12,13,14,46,34,87,23,39,39,39]\n",
     "freq_dict = {num: arr.count(num) for num in set(arr)}\n",
     "freq_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "2 2 3\n"
+     ]
+    }
+   ],
    "source": [
     "#5. Given a number n, write a function to print all prime factors of n. For example, if the input number is 12, then output should be “2 2 3”.\n",
     "# num = int(input())\n",
@@ -132,9 +168,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 6. Given two numbers n and r, find the value of nCr (binomial coefficient: nCr = (n!) / (r! * (n-r)!))\n",
     "def factorial(num):\n",
@@ -149,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,25 +252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'solve': 7,\n",
-       " 'this': 4,\n",
-       " 'text': 7,\n",
-       " 'file': 7,\n",
+       "{'a': 7,\n",
+       " 'solve': 7,\n",
        " 'to': 7,\n",
-       " 'a': 7,\n",
-       " 'exercisethis': 3,\n",
+       " 'exercise': 4,\n",
        " 'is': 7,\n",
+       " 'this': 4,\n",
        " 'sample': 7,\n",
-       " 'exercise': 4}"
+       " 'exercisethis': 3,\n",
+       " 'text': 7,\n",
+       " 'file': 7}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
