output format changed

--- a/Exercise 1.ipynb
+++ b/Exercise 1.ipynb
@@ -4,35 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DSECLPFDS - Python Exercises for Practice (S1 to S3)\n",
-    "Instructions: Do not use any Python libraries and write the\n",
-    "following codes from scratch for best learning/ revision.\n",
-    "1. Given a number, find the sum of its digits. Take the number as\n",
-    "an input from the user.\n",
-    "2. Given a number, check whether the given number is an\n",
-    "Armstrong number or not.\n",
-    "Example: 153 = 1*1*1 + 5*5*5 + 3*3*3\n",
-    "153 is an Armstrong number of order 3.\n",
-    "Inputs from the user will be number and order n.\n",
-    "3. Given a string, write a python function to check if it is\n",
-    "palindrome or not. A string is said to be palindrome if the reverse\n",
-    "of the string is the same as string. For example, “malayalam” is a\n",
-    "palindrome, but “music” is not a palindrome.\n",
-    "4. Given an array which may contain duplicates, print all elements\n",
-    "and their frequencies.\n",
-    "5. Given a number n, write a function to print all prime factors of\n",
-    "n. For example, if the input number is 12, then output should be\n",
-    "“2 2 3”.\n",
-    "6. Given two numbers n and r, find the value of nCr (binomial\n",
-    "coefficient: nCr = (n!) / (r! * (n-r)!))\n",
-    "7. Searching: Given a sorted array arr[] of n elements, write a\n",
-    "function to search a given element x in arr[]. Do it using linear\n",
-    "and binary search techniques.\n",
-    "8. Input a text file (containing 1 or more paragraphs of English\n",
-    "text) from the user, parse this file to display the frequency of\n",
-    "occurrence of each word in this text file. Find the 3 most frequent\n",
-    "words as well.\n",
-    "*****"
+    "### Instructions: Do not use any Python libraries and write the\n",
+    "### following codes from scratch for best learning/ revision"
    ]
   },
   {
@@ -44,8 +17,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1234\n",
-      "Sum of digits in number is  10\n"
+      "12345\n",
+      "Sum of digits in number is  15\n"
      ]
     }
    ],
@@ -79,8 +52,7 @@
     "if sum(powered)==int(num):\n",
     "    print(num +' is Armstrong')\n",
     "else:\n",
-    "    print(num +' is Not Armstrong')\n",
-    "    \n"
+    "    print(num +' is Not Armstrong')"
    ]
   },
   {
@@ -101,7 +73,6 @@
     "#3. Given a string, write a python function to check if it is palindrome or not. A string is said to be palindrome if the reverse of the string is the same as string. For example, “malayalam” is a palindrome, but “music” is not a palindrome.\n",
     "input_str= input().lower()\n",
     "str_len=len(input_str)\n",
-    "\n",
     "if input_str ==input_str[::-1] :\n",
     "    print(input_str+' is palindrome')\n",
     "else:\n",
@@ -114,14 +85,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{34: 1, 39: 3, 12: 1, 13: 1, 46: 1, 14: 1, 23: 1, 87: 1}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequency of each number : {34: 1, 39: 3, 12: 1, 13: 1, 46: 1, 14: 1, 23: 1, 87: 1}\n"
+     ]
     }
    ],
    "source": [
@@ -129,7 +97,7 @@
     "# arr=list(map(int, input().split()))\n",
     "arr=[12,13,14,46,34,87,23,39,39,39]\n",
     "freq_dict = {num: arr.count(num) for num in set(arr)}\n",
-    "freq_dict"
+    "print('Frequency of each number :',freq_dict)"
    ]
   },
   {
@@ -142,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "12\n",
-      "2 2 3\n"
+      "prime factors of  12 = 2 2 3\n"
      ]
     }
    ],
@@ -158,12 +126,9 @@
     "    for i in allPrimeLessThanNumber:\n",
     "        if num % i==0:\n",
     "            prime_factors.append(i)\n",
-    "            return(getPrimeFactors(num // i))\n",
-    "            \n",
+    "            return(getPrimeFactors(num // i))            \n",
     "getPrimeFactors(num)\n",
-    "print(*prime_factors, sep=' ')\n",
-    "    \n",
-    "    "
+    "print('prime factors of ',num ,'=',*prime_factors, sep=' ')   "
    ]
   },
   {
@@ -175,18 +140,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2\n"
+      "3 2\n",
+      "3 C 2  =  3.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -198,7 +154,7 @@
     "        return num*factorial(num-1)\n",
     "n, r = map(int, input().split())\n",
     "binomial_coefficient=factorial(n)/(factorial(r)*factorial(n-r)) \n",
-    "binomial_coefficient"
+    "print(n, 'C', r,' = ', binomial_coefficient)"
    ]
   },
   {
@@ -210,11 +166,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 [12, 13, 14, 23, 34, 46, 87] 23 87\n",
-      "4 [23, 34, 46, 87] 46 87\n",
-      "2 [46, 87] 87 87\n",
-      "Number found\n",
-      "Number found\n"
+      "Input array:  [12, 13, 14, 46, 34, 87, 23]\n",
+      "Find number:  87\n",
+      "binary search result:  Number found\n",
+      "linear search result:  Number found\n"
      ]
     }
    ],
@@ -224,30 +179,28 @@
     "# find_num= int(input())\n",
     "arr=[12,13,14,46,34,87,23]\n",
     "find_num=87\n",
+    "print('Input array: ',arr)\n",
+    "print('Find number: ', find_num)\n",
     "sorted_arr= sorted(arr)\n",
     "def linear_search(sorted_arr,num):\n",
     "    for i in sorted_arr:\n",
     "        if i ==num:\n",
-    "            print('Number found')\n",
-    "            return\n",
+    "            return('Number found')            \n",
     "    else:\n",
-    "        print('Number not found')\n",
+    "        return('Number not found')\n",
     "def binary_search(sorted_arr, num):\n",
     "    middle= len(sorted_arr)//2\n",
-    "    print(len(sorted_arr), sorted_arr,sorted_arr[middle], num)\n",
+    "#     print(len(sorted_arr), sorted_arr,sorted_arr[middle], num)\n",
     "    if len(sorted_arr)==1:\n",
-    "        print('Number not found')    \n",
-    "        return\n",
+    "        return('Number not found')            \n",
     "    if sorted_arr[middle] == num:\n",
-    "        print('Number found')\n",
-    "        return\n",
+    "        return('Number found')        \n",
     "    elif(sorted_arr[middle] > num):\n",
-    "        binary_search(sorted_arr[:len(sorted_arr)//2], num)\n",
+    "        return(binary_search(sorted_arr[:len(sorted_arr)//2], num))\n",
     "    else:\n",
-    "        binary_search(sorted_arr[len(sorted_arr)//2:], num)\n",
-    "\n",
-    "binary_search(sorted_arr, find_num)\n",
-    "linear_search(sorted_arr, find_num)\n"
+    "        return(binary_search(sorted_arr[len(sorted_arr)//2:], num))\n",
+    "print('binary search result: ',binary_search(sorted_arr, find_num))\n",
+    "print('linear search result: ',linear_search(sorted_arr, find_num))"
    ]
   },
   {
@@ -258,16 +211,16 @@
     {
      "data": {
       "text/plain": [
-       "{'a': 7,\n",
-       " 'solve': 7,\n",
-       " 'to': 7,\n",
+       "{'exercisethis': 3,\n",
        " 'exercise': 4,\n",
+       " 'text': 7,\n",
+       " 'file': 7,\n",
+       " 'to': 7,\n",
+       " 'solve': 7,\n",
+       " 'a': 7,\n",
        " 'is': 7,\n",
        " 'this': 4,\n",
-       " 'sample': 7,\n",
-       " 'exercisethis': 3,\n",
-       " 'text': 7,\n",
-       " 'file': 7}"
+       " 'sample': 7}"
       ]
      },
      "execution_count": 8,
