top 3 most frequent words displayed

--- a/Exercise 1.ipynb
+++ b/Exercise 1.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -213,17 +213,17 @@
       "text/plain": [
        "{'exercisethis': 3,\n",
        " 'exercise': 4,\n",
+       " 'is': 7,\n",
+       " 'sample': 7,\n",
        " 'text': 7,\n",
        " 'file': 7,\n",
-       " 'to': 7,\n",
-       " 'solve': 7,\n",
        " 'a': 7,\n",
-       " 'is': 7,\n",
        " 'this': 4,\n",
-       " 'sample': 7}"
+       " 'solve': 7,\n",
+       " 'to': 7}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +242,34 @@
     "token_freq={i: tokens.count(i) for i in set(tokens) }\n",
     "token_freq"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 7), ('file', 7), ('is', 7)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the 3 most frequent words as well.\n",
+    "sorted(token_freq.items(), key=lambda x: (-x[1], x[0]))[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
